--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -10,7 +10,7 @@
 }
 @article{netzpaper2,
   author = "Roland Netz",
-  title = "N/A",
+  title = "\textit{Paper in preperation...}",
   year = 2014
 }
 @article{brownian,
